button fix NOT SHOWING UP

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ header {
     /* places the image relative to the viewport instead of the element  */
     background-attachment: fixed;
     background-position: 80%;
+    z-index: 9999;
   }
   header h1 {
     font-weight: bold;
@@ -165,7 +166,63 @@ footer {
   }
   .hero-form p {
     margin:5px 0 15px 0;
+  }
 
+  /* opacity at 0 makes the inputs inside dissapear */
+  .checkbox-wrapper input, .radio-wrapper input {
+    opacity: 0;
+    position: relative;
+   left: 10px;
+    margin: 10px;
+    line-height: 1.6;
+  }
+
+  /* before places this content before everything else that currently resides in the element */
+  .checkbox-wrapper label::before, .radio-wrapper label::before {
+    content: "";
+    height: 20px;
+    width: 20px;
+    background: rgba(255, 255, 255, 0.75);  
+    border: 1px solid #024e76;  
+    position: absolute;
+    top: -4px;
+    left: -30px;
+  }
+
+  .radio-wrapper label::before {
+    /* turns an element into a round circle or oval */
+    border-radius: 50%;
+  }
+
+  .radio-wrapper label::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #024e76;
+    position: absolute;
+    left: -29px;
+    top: -3px;
+  }
+  
+  .checkbox-wrapper label::after {
+    content: "";
+    height: 6px;
+    width: 14px;
+    border-left: 2px solid #024e76;
+    border-bottom: 2px solid #024e76;
+    position: absolute;
+    left: -26px;
+    top: 1px;
+    transform: rotate(-58deg);
+  }
+
+  .checkbox-wrapper input + label::after, .radio-wrapper input + label::after {
+    content: none;
+  }
+  
+  .checkbox-wrapper input:checked + label::after, .radio-wrapper input:checked + label::after {
+    content: "";
   }
 
   .form-input {
